force-app/main/default/objects/redwing__Appinium_Learning_eSignature_Settings__mdt/redwing__Appinium_Learning_eSignature_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Appinium Learning eSignature Settings</label>
    <pluralLabel>Appinium Learning eSignature Settings</pluralLabel>
</CustomObject>