force-app/main/default/objects/redwing__Appinium_Learning_eSignature_Settings__mdt/fields/redwing__Active__c.field-meta.xml
<CustomField>
    <fullName>redwing__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Defines either signature configuration active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>