force-app/main/default/objects/redwing__Appinium_Learning_eSignature_Settings__mdt/fields/redwing__Apply_for__c.field-meta.xml
<CustomField>
    <fullName>redwing__Apply_for__c</fullName>
    <inlineHelpText>Action requiring signature configuration.</inlineHelpText>
    <label>Apply for</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completion of Quiz Learning Objects</fullName>
                <default>true</default>
                <label>Completion of Quiz Learning Objects</label>
            </value>
            <value>
                <fullName>Completion of Rich Text Learning Objects</fullName>
            </value>
            <value>
                <fullName>Completion of Task Learning Objects</fullName>
            </value>
            <value>
                <fullName>Completion of Resource Learning Objects</fullName>
            </value>
            <value>
                <fullName>Completion of Media Learning Objects</fullName>
            </value>
            <value>
                <fullName>Completion Learning Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>