force-app/main/default/objects/redwing__Appinium_Learning_eSignature_Settings__mdt/fields/redwing__Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>redwing__Signature_Method__c</fullName>
    <inlineHelpText>Method for signature configuration.</inlineHelpText>
    <label>Signature Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce 2FA</fullName>
                <default>true</default>
                <label>Salesforce 2FA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>